--- a/blocks/cover/__link-visible/cover__link-visible.css
+++ b/blocks/cover/__link-visible/cover__link-visible.css
@@ -3,6 +3,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  text-decoration: none;
+  color: white;
 }
 
 @media (min-width: 1019px) and (max-width: 1274px) {
