--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,25 @@
-.place__image {
+.place__img {
   margin: 0;
   max-width: 460px;
   max-height: 460px;
 }
 
 @media (min-width: 1019px) and (max-width: 1274px) {
-  .place__image {
+  .place__img {
       max-width: 440px;
       max-height: 440px;
   }
 }
 
 @media (min-width: 763px) and (max-width: 1018px) {
-  .place__image {
+  .place__img {
       max-width: 340px;
       max-height: 340px;
   }
 }
 
 @media (min-width: 320px) and (max-width: 762px) {
-  .place__image {
+  .place__img {
       margin: 32px 0 0;
       max-width: 318px;
       max-height: 319px;
